src/objects/Dev_ProblemAndRequirementManage_Obj__c.object
<CustomObject>
    <description>このアプリケーションの要望などを記載するオブジェクト
プレフィックス「PR」</description>
    <fields>
        <fullName>Dev_PR_Detail__c</fullName>
        <label>詳細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_PR_OverView__c</fullName>
        <label>概要</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_PR_RecordUrlForMail__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_350
  ,FIND(&quot;/services/Soap/&quot;, $Api.Partner_Server_URL_350)) + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メール記載用URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_PR_Status__c</fullName>
        <label>ステータス</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未対応</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>調査中</fullName>
                </value>
                <value>
                    <fullName>対応中</fullName>
                </value>
                <value>
                    <fullName>対応完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dev_PR_TargetComponent__c</fullName>
        <label>対象コンポーネント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_PR_Type__c</fullName>
        <label>種別</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>課題</fullName>
                </value>
                <value>
                    <fullName>要望</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>課題・要望管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dev_PR_OverView__c</columns>
        <columns>Dev_PR_Status__c</columns>
        <columns>Dev_PR_Type__c</columns>
        <columns>Dev_PR_Detail__c</columns>
        <columns>Dev_PR_TargetComponent__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>課題・要望管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>